changed return data of x_movement() functions to include start coordinate in order to help out checkmate() function. TODO: Add diagonal movement function and finish checkmate function